--- a/src/pages/FavoriteMoviePage/FavoriteMoviePage.css
+++ b/src/pages/FavoriteMoviePage/FavoriteMoviePage.css
@@ -1,5 +1,58 @@
 
- 
+
+
+.favorite-movies-container {
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  
+  .favorite-movies-container > div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  
+  .movie-card {
+    width: 25%;
+    border: 1px solid red;
+    padding: 10px;
+    box-sizing: border-box;
+    margin: 10px;
+  }
+  
+  .movie-card h2 {
+    margin-top: 0;
+  }
+  
+  .movie-card img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  
+  .movie-card p {
+    margin-bottom: 10px;
+  }
+  
+  .movie-card button {
+    font-weight: bold;
+    text-transform: capitalize;
+    background-color: transparent;
+    border: none;
+    color: blue;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  
+  .movie-card button:hover {
+    text-decoration: none;
+  }
+  
   
   .remove-button:hover {
     background-color: #c0392b;
