--- a/src/pages/StreamSearchPage/StreamSearchPage.css
+++ b/src/pages/StreamSearchPage/StreamSearchPage.css
@@ -7,6 +7,7 @@
   .search-results {
     display: flex;
     flex-wrap: wrap;
+   
   }
   
   .search-results > div {
@@ -38,4 +39,11 @@
   .search-results a:hover {
     text-decoration: underline;
   }
-  
+  .streaming-on {
+    font-weight: bold;
+  }
+
+  .service {
+    font-weight: bold;
+    text-transform: capitalize;
+  }
