--- a/src/pages/StreamSearchPage/StreamSearchPage.css
+++ b/src/pages/StreamSearchPage/StreamSearchPage.css
@@ -1,16 +1,12 @@
 .stream-search-container button {
-    background-color: tan; /* Set the background color to tan */
+   /* Set the background color to tan */
     color: white; /* Set the text color */
     border: none;
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 5px 10px; /* Adjust the padding values as needed */
+    font-size: 14px; /* Adjust the font size as needed */
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
-    
-   
-    
-    
   }
 
   
@@ -74,20 +70,12 @@
     background-color: teal;;
  }
   
-.search-button {
-    
-}
 
-.stream-search-container button {
-    background-color: tan; /* Set the background color to tan */
-    color: white; /* Set the text color */
-    border: none;
-    padding: 5px 10px; /* Adjust the padding values as needed */
-    font-size: 14px; /* Adjust the font size as needed */
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
-  }
+
+
+
+
+
   
   .search-form {
     display: flex;
@@ -100,44 +88,63 @@
   }
   
   .search-button {
-    margin-left: 10px;
-    /* Add some margin between the input and the button */
+    margin-left: 0; /* Remove the margin on the left */
+    /* Add any additional margin or padding as needed */
+   
+    border: none;
+    padding: 0;
+    
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
+  
+  .search-button img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-style: solid;
+    border: tan solid;
+    border-width: thick;
+     /* Add this line to maintain the aspect ratio of the image */
+  }
+  
+  .button-container {
+    display: flex;
+    margin-top: 10px; /* Add margin as needed */
+  }
+  
+
+  
+  
+  
+
 
   
   @keyframes shake {
     0% {
       transform: translateX(0);
     }
-    10% {
-      transform: translateX(-10px);
-    }
-    20% {
-      transform: translateX(10px);
-    }
-    30% {
-      transform: translateX(-10px);
-    }
-    40% {
-      transform: translateX(10px);
+    25% {
+      transform: translateX(-5px);
     }
     50% {
-      transform: translateX(-10px);
+      transform: translateX(5px);
     }
-    60% {
-      transform: translateX(10px);
-    }
-    70% {
-      transform: translateX(-10px);
-    }
-    80% {
-      transform: translateX(10px);
-    }
-    90% {
-      transform: translateX(-10px);
+    75% {
+      transform: translateX(-5px);
     }
     100% {
       transform: translateX(0);
     }
+  }
+  
+  .shake.animated {
+    animation-name: shake;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+    
   }
   
