--- a/src/pages/StreamSearchPage/StreamSearchPage.css
+++ b/src/pages/StreamSearchPage/StreamSearchPage.css
@@ -7,6 +7,7 @@
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
+    background-color: transparent;
   }
   
   .search-results {
@@ -14,6 +15,7 @@
     flex-wrap: wrap;
     justify-content: center; /* Add this line to center the objects horizontally */
     align-items: center; 
+    
     /* Add this line to center the objects vertically */
   }
   
@@ -72,7 +74,7 @@
  .search-form {
   display: flex;
   align-items: center;
-  margin: 20px 20%; /* Increase the top and bottom margin */
+  margin: 20px 40%; /* Increase the top and bottom margin */
 }
 
 .search-input {
@@ -96,9 +98,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
-  border-style: solid;
-  border: tan solid;
-  border-width: thick;
+  
 }
 
   
@@ -114,7 +114,7 @@ h3 {
   color: white;
   font-size: 16px;
   text-align: center;
-  margin: 0 20%;
+  margin: 0 30%;
   border: 3px dashed tan;
 }
 
@@ -167,6 +167,7 @@ h3 {
     
     .search-button {
       height: 40px;
+      width: 40px;
     }
     
     .search-button img {
@@ -204,6 +205,7 @@ h3 {
     
     .search-button {
       height: 50px;
+      width: 50px;
     }
     
     .search-button img {
