--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,13 +1,10 @@
-/* CSS for NavBar */
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: tan;
+  background-color: tan; /* Lighter background for a clean look */
   padding: 10px 20px;
-  height: 80px;
-  border-bottom: aliceblue;
-  border-bottom-style: groove;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
 }
 
 .logo-container {
@@ -16,52 +13,45 @@ nav {
 }
 
 .logo {
-  height: 50px; /* Adjust the logo height as desired */
+  height: 50px;
   width: auto;
-  margin-right: 10px; /* Add margin as desired */
 }
 
-.app-title {
-  flex: 1; /* Take up remaining space */
-  text-align: center; /* Center the app title */
-  font-family: 'Tektur', cursive; /* Specify the 'Tektur' font */
-  font-weight: bold; /* Make the app title bold */
-  font-size: 28px; /* Set the font size to a larger value */
-  color: white; /* Set the font color to white */
-  text-shadow: -2px -2px teal, 2px -2px teal, -2px 2px teal, 2px 2px teal; /* Set the outline */
-  padding: 8px 16px; /* Add padding to the app title */
-  width: 100%; /* Extend the div to the full width of the navbar */
+.nav-links {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
+.nav-links li {
+  margin: 0 10px;
+}
 
-nav a {
+.nav-links a {
   color: #333;
   text-decoration: none;
-  margin-right: 10px; /* Add margin as desired */
+  font-weight: bold; /* Make links bold for better readability */
 }
 
-nav a:last-child {
-  margin-right: 0;
+.user-name {
+  font-style: italic; /* Differentiate the user name style */
 }
 
-/* Media query for responsive design */
+/* Responsive design adjustments */
 @media (max-width: 768px) {
-  .logo-container {
-    margin-right: 10px; /* Add margin as desired */
-  }
-  
   nav {
-    justify-content: center; /* Center the elements */
+    flex-direction: column;
+    align-items: center;
   }
-  
-  nav a {
-    font-size: 14px; /* Adjust the font size as desired */
+
+  .nav-links {
+    flex-direction: column;
+    align-items: center;
   }
-  
-  .app-title {
-    flex: 1; /* Take up remaining space */
-    text-align: center; /* Center the app title */
-    margin-right: 0; /* Remove the margin added for the logo width */
+
+  .nav-links li {
+    margin: 5px 0;
   }
 }
 
